tests/snapshots/examples_fixtures/aether__bench_reuse.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aether/bench_reuse.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `first`.

  examples/aether/bench_reuse.flx:94:33
   |
94 |     print("map: result head = #{first(mapped)}")
   |                                 ^^^^^

Hint:
  Define it first: let first = ...;
== stdout ==
<not executed>
